.opencode/specs/003-system-spec-kit/139-hybrid-rag-fusion/006-hybrid-rag-fusion-logic-improvements/scratch/w6-baseline-logs/01-performance-benchmarks.out
$ cd '/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public' && node .opencode/skill/system-spec-kit/scripts/dist/evals/run-performance-benchmarks.js '.opencode/specs/003-system-spec-kit/139-hybrid-rag-fusion/006-hybrid-rag-fusion-logic-improvements'
node:internal/modules/cjs/loader:1458
  throw err;
  ^

Error: Cannot find module '../../mcp_server/lib/search/session-boost'
Require stack:
- /Users/michelkerkmeester/MEGA/Development/Opencode Env/Public/.opencode/skill/system-spec-kit/scripts/dist/evals/run-performance-benchmarks.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1455:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1065:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1070:22)
    at Module._load (node:internal/modules/cjs/loader:1241:25)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1555:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public/.opencode/skill/system-spec-kit/scripts/dist/evals/run-performance-benchmarks.js:46:35)
    at Module._compile (node:internal/modules/cjs/loader:1811:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1942:10) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    '/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public/.opencode/skill/system-spec-kit/scripts/dist/evals/run-performance-benchmarks.js'
  ]
}

Node.js v25.6.1
